--- a/index.html
+++ b/index.html
@@ -16,14 +16,26 @@ html,body{margin:0;padding:0;}
     top:10px;
     left:60px;
     background:white;
-    padding:8px 10px;
-    border-radius:8px;
-    box-shadow:0 2px 8px rgba(0,0,0,0.3);
+    padding:8px 12px;
+    border-radius:10px;
+    box-shadow:0 2px 10px rgba(0,0,0,0.35);
     z-index:1000;
     font-family:Arial;
+    font-size:14px;
 }
-#radioPanel input{
-    width:70px;
+
+#radioPanel button{
+    font-size:16px;
+    padding:3px 8px;
+    margin:2px;
+}
+
+#freqInput{
+    width:60px;
+    text-align:center;
+    font-weight:bold;
+    border:1px solid #aaa;
+    border-radius:6px;
 }
 </style>
 </head>
@@ -33,8 +45,10 @@ html,body{margin:0;padding:0;}
 <div id="map"></div>
 
 <div id="radioPanel">
-    <label>Frequency:</label>
-    <input id="freqInput" type="number" step="0.1" min="87.5" max="108" value="97.9">
+    <b>FM Tuner</b><br>
+    <button onclick="stepDown()">−</button>
+    <input id="freqInput" type="text" value="97.9" readonly>
+    <button onclick="stepUp()">+</button>
     <button onclick="tune()">Tune</button>
 </div>
 
@@ -43,52 +57,65 @@ html,body{margin:0;padding:0;}
 // creează harta
 var map = L.map('map').setView([45.8, 26.5], 7);
 
-// OpenStreetMap tiles
+// OpenStreetMap
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
     maxZoom:19,
     attribution:'© OpenStreetMap'
 }).addTo(map);
 
-// variabile globale necesare pentru filtrare
 let allStations = [];
-let geoLayer = null;
+let geoLayer;
 
-// încarcă baza de date
+// -------------------
+// ÎNCĂRCARE BAZĂ DATE
+// -------------------
 fetch('fm.json')
 .then(response => response.json())
 .then(data => {
 
-    // salvăm toate stațiile
     allStations = data.features;
 
-    // desenăm layerul inițial
+    // inițial arată toate stațiile
     geoLayer = L.geoJSON(data,{
         onEachFeature: function(feature, layer){
 
             if(feature.properties){
-
-                let desc = feature.properties.description || "";
-
-                // formatare vizuală
-                desc = desc.replace(/(\d{2,3}\.\d)/g, "<br>$1");
+                let desc = formatDescription(feature.properties.description || "");
 
                 layer.bindPopup(
-                    "<b>" + (feature.properties.name || "") + "</b>" + desc
+                    "<b>" + (feature.properties.name || "") + "</b><br>" + desc
                 );
             }
         }
     }).addTo(map);
-
 });
 
-// funcția de acordare
+
+// -------------------
+// FORMATARE TEXT POPUP
+// -------------------
+function formatDescription(desc){
+
+    // separă fiecare stație pe linie nouă
+    desc = desc.replace(/(\d{2,3}\.\d\s*[hv])/gi, "<br>$1");
+
+    // scoate <br> de la început
+    if(desc.startsWith("<br>"))
+        desc = desc.substring(4);
+
+    return desc;
+}
+
+
+// -------------------
+// TUNER
+// -------------------
 function tune(){
 
     let freq = parseFloat(document.getElementById("freqInput").value);
 
-    if(geoLayer){
+    if(geoLayer)
         map.removeLayer(geoLayer);
-    }
 
     let filteredFeatures = [];
 
@@ -96,10 +123,9 @@ function tune(){
 
         let desc = f.properties.description || "";
 
-        // separă posturile individuale
-        let stations = desc.split(/(?=\d{2,3}\.\d\s[hv])/i);
+        // separă stațiile individuale
+        let stations = desc.split(/(?=\d{2,3}\.\d\s*[hv])/i);
 
-        // caută postul care corespunde frecvenței
         let matched = stations.filter(s => {
 
             let m = s.match(/\d{2,3}\.\d/);
@@ -111,8 +137,7 @@ function tune(){
         if(matched.length > 0){
 
             let newFeature = JSON.parse(JSON.stringify(f));
-
-            newFeature.properties.description = matched.join("<br>");
+            newFeature.properties.description = formatDescription(matched.join("<br>"));
 
             filteredFeatures.push(newFeature);
         }
@@ -130,6 +155,24 @@ function tune(){
             );
         }
     }).addTo(map);
+}
+
+
+// -------------------
+// ACORD +/- 0.1 MHz
+// -------------------
+function stepUp(){
+    let f = parseFloat(freqInput.value);
+    f = Math.min(108, f + 0.1);
+    freqInput.value = f.toFixed(1);
+    tune();
+}
+
+function stepDown(){
+    let f = parseFloat(freqInput.value);
+    f = Math.max(87.5, f - 0.1);
+    freqInput.value = f.toFixed(1);
+    tune();
 }
 
 </script>
