--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>FM Map Romania</title>
+<title>FM Map Romania & Moldova</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -16,115 +16,170 @@ html,body{margin:0;padding:0;}
     top:10px;
     left:60px;
     background:white;
-    padding:8px 12px;
+    padding:10px;
     border-radius:10px;
-    box-shadow:0 2px 10px rgba(0,0,0,0.35);
+    box-shadow:0 3px 10px rgba(0,0,0,0.35);
     z-index:1000;
     font-family:Arial;
     font-size:14px;
 }
 
-#radioPanel button{
-    font-size:16px;
-    padding:3px 8px;
-    margin:2px;
+#radioPanel input{
+    width:70px;
 }
 
-#freqInput{
-    width:60px;
-    text-align:center;
-    font-weight:bold;
-    border:1px solid #aaa;
-    border-radius:6px;
+#radioPanel button{
+    margin-top:4px;
+    margin-right:4px;
 }
 </style>
 </head>
 
 <body>
 
-<div id="map"></div>
-
 <div id="radioPanel">
     <b>FM Tuner</b><br>
-    <button onclick="stepDown()">−</button>
-    <input id="freqInput" type="text" value="97.9" readonly>
-    <button onclick="stepUp()">+</button>
+    <label>Frequency:</label>
+    <input id="freqInput" type="number" step="0.1" min="87.5" max="108" value="97.9">
     <button onclick="tune()">Tune</button>
+    <br><br>
+    <b>Country:</b><br>
+    <button onclick="switchCountry('RO')">Romania</button>
+    <button onclick="switchCountry('MD')">Moldova</button>
 </div>
+
+<div id="map"></div>
 
 <script>
 
-// creează harta
-var map = L.map('map').setView([45.8, 26.5], 7);
+// ================= MAP =================
 
-// OpenStreetMap
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+var map = L.map('map').setView([45.8, 26.5],7);
+
+// --- ESRI SATELLITE ---
+var esriSat = L.tileLayer(
+'https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',{
     maxZoom:19,
-    attribution:'© OpenStreetMap'
+    attribution:'Tiles © Esri'
 }).addTo(map);
 
-let allStations = [];
-let geoLayer;
-
-// -------------------
-// ÎNCĂRCARE BAZĂ DATE
-// -------------------
-fetch('fm.json')
-.then(response => response.json())
-.then(data => {
-
-    allStations = data.features;
-
-    // inițial arată toate stațiile
-    geoLayer = L.geoJSON(data,{
-        onEachFeature: function(feature, layer){
-
-            if(feature.properties){
-                let desc = formatDescription(feature.properties.description || "");
-
-                layer.bindPopup(
-                    "<b>" + (feature.properties.name || "") + "</b><br>" + desc
-                );
-            }
-        }
-    }).addTo(map);
-});
+// --- ESRI LABELS ---
+var esriLabels = L.tileLayer(
+'https://services.arcgisonline.com/ArcGIS/rest/services/Reference/World_Boundaries_and_Places/MapServer/tile/{z}/{y}/{x}',{
+    maxZoom:19,
+    attribution:'Labels © Esri'
+}).addTo(map);
 
 
-// -------------------
-// FORMATARE TEXT POPUP
-// -------------------
+// ================= VARIABLES =================
+
+let allStationsRO = [];
+let allStationsMD = [];
+
+let geoLayerRO;
+let geoLayerMD;
+
+let filteredLayer;
+
+let currentCountry = "RO";
+
+
+// ================= DESCRIPTION FORMAT =================
+
 function formatDescription(desc){
 
-    // separă fiecare stație pe linie nouă
-    desc = desc.replace(/(\d{2,3}\.\d\s*[hv])/gi, "<br>$1");
+    // pune fiecare frecvență pe linie nouă
+    desc = desc.replace(/(\d{2,3}\.\d\s[hv])/gi,"<br>$1");
 
-    // scoate <br> de la început
-    if(desc.startsWith("<br>"))
-        desc = desc.substring(4);
+    // elimină primul <br>
+    if(desc.startsWith("<br>")) desc = desc.substring(4);
 
     return desc;
 }
 
 
-// -------------------
-// TUNER
-// -------------------
+// ================= LOAD ROMANIA =================
+
+fetch('fm_ro.json')
+.then(r => r.json())
+.then(data => {
+
+    allStationsRO = data.features;
+
+    geoLayerRO = L.geoJSON(data,{
+        onEachFeature: function(feature, layer){
+
+            let desc = formatDescription(feature.properties.description || "");
+
+            layer.bindPopup(
+                "<b>" + (feature.properties.name || "") + "</b><br>" + desc
+            );
+        }
+    }).addTo(map);
+});
+
+
+// ================= LOAD MOLDOVA =================
+
+fetch('fm_md.json')
+.then(r => r.json())
+.then(data => {
+
+    allStationsMD = data.features;
+
+    geoLayerMD = L.geoJSON(data,{
+        onEachFeature: function(feature, layer){
+
+            let desc = formatDescription(feature.properties.description || "");
+
+            layer.bindPopup(
+                "<b>" + (feature.properties.name || "") + "</b><br>" + desc
+            );
+        }
+    });
+});
+
+
+// ================= SWITCH COUNTRY =================
+
+function switchCountry(c){
+
+    currentCountry = c;
+
+    if(geoLayerRO) map.removeLayer(geoLayerRO);
+    if(geoLayerMD) map.removeLayer(geoLayerMD);
+    if(filteredLayer) map.removeLayer(filteredLayer);
+
+    if(c === "RO"){
+        geoLayerRO.addTo(map);
+        map.setView([45.8,26.5],7);
+    }else{
+        geoLayerMD.addTo(map);
+        map.setView([47.0,28.6],8);
+    }
+
+    tune();
+}
+
+
+// ================= TUNER =================
+
 function tune(){
 
     let freq = parseFloat(document.getElementById("freqInput").value);
 
-    if(geoLayer)
-        map.removeLayer(geoLayer);
+    if(filteredLayer) map.removeLayer(filteredLayer);
+
+    let dataset = (currentCountry === "RO") ? allStationsRO : allStationsMD;
 
     let filteredFeatures = [];
 
-    allStations.forEach(f => {
+    dataset.forEach(f => {
 
         let desc = f.properties.description || "";
 
-        // separă stațiile individuale
-        let stations = desc.split(/(?=\d{2,3}\.\d\s*[hv])/i);
+        // separă fiecare post
+        let stations = desc.split(/(?=\d{2,3}\.\d\s[hv])/i);
 
         let matched = stations.filter(s => {
 
@@ -143,7 +198,7 @@ function tune(){
         }
     });
 
-    geoLayer = L.geoJSON({
+    filteredLayer = L.geoJSON({
         type:"FeatureCollection",
         features: filteredFeatures
     },{
@@ -157,25 +212,6 @@ function tune(){
     }).addTo(map);
 }
 
-
-// -------------------
-// ACORD +/- 0.1 MHz
-// -------------------
-function stepUp(){
-    let f = parseFloat(freqInput.value);
-    f = Math.min(108, f + 0.1);
-    freqInput.value = f.toFixed(1);
-    tune();
-}
-
-function stepDown(){
-    let f = parseFloat(freqInput.value);
-    f = Math.max(87.5, f - 0.1);
-    freqInput.value = f.toFixed(1);
-    tune();
-}
-
 </script>
-
 </body>
 </html>
