--- a/index.html
+++ b/index.html
@@ -37,17 +37,23 @@ button{
     border:1px solid #aaa;
     background:#f5f5f5;
 }
+button:hover{ background:#eaeaea; }
 
-button:hover{
-    background:#eaeaea;
-}
-
-/* white halo around antenna */
+/* marker mic + contur alb */
 .antenna-wrapper{
-    background:white;
+    width:22px;
+    height:22px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    border:2.5px solid white;
     border-radius:50%;
-    padding:4px;
-    box-shadow:0 0 7px rgba(0,0,0,0.7);
+    box-shadow:0 0 4px rgba(0,0,0,0.6);
+    background:transparent;
+}
+.antenna-wrapper img{
+    width:14px;
+    height:14px;
 }
 </style>
 </head>
@@ -85,13 +91,13 @@ L.tileLayer(
 { maxZoom:19, opacity:0.85 }
 ).addTo(map);
 
-/* antenna icon with halo */
+/* antena mica cu halo */
 var antennaIcon = L.divIcon({
-    html:'<div class="antenna-wrapper"><img src="https://i.ibb.co/TtThCNR/antenna.png" width="22"></div>',
+    html:'<div class="antenna-wrapper"><img src="https://i.ibb.co/TtThCNR/antenna.png"></div>',
     className:'',
-    iconSize:[30,30],
-    iconAnchor:[15,28],
-    popupAnchor:[0,-28]
+    iconSize:[22,22],
+    iconAnchor:[11,11],
+    popupAnchor:[0,-10]
 });
 
 let allStationsRO = [];
@@ -99,7 +105,7 @@ let allStationsMD = [];
 let currentCountry = "ro";
 let geoLayer = null;
 
-/* LOAD ROMANIA */
+/* ROMANIA */
 fetch('fm.json')
 .then(r=>r.json())
 .then(data=>{
@@ -107,7 +113,7 @@ fetch('fm.json')
     tune();
 });
 
-/* LOAD MOLDOVA */
+/* MOLDOVA */
 fetch('fm_md.json')
 .then(r=>r.json())
 .then(data=>{
