--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ L.tileLayer(
 { maxZoom:19, opacity:0.85 }
 ).addTo(map);
 
-/* ================= ICON ================= */
+/* ================= ICONS ================= */
 
 var antennaIcon = L.icon({
     iconUrl: 'https://i.ibb.co/Bh7GDMv/antenna.png',
@@ -83,6 +83,16 @@ var antennaIcon = L.icon({
     iconAnchor: [13,26],
     popupAnchor: [0,-24]
 });
+
+/* receptor (Yagi) */
+var receiverIcon = L.icon({
+    iconUrl: 'https://i.ibb.co/Z2w2XK6/yagi.png',
+    iconSize: [32,32],
+    iconAnchor: [16,32],
+    popupAnchor: [0,-30]
+});
+
+let receiverMarker = null;
 
 /* ================= DATA ================= */
 
@@ -92,8 +102,6 @@ let currentCountry = "ro";
 let geoLayer = null;
 let dataLoaded = false;
 
-/* load both datasets BEFORE tuner works */
-
 Promise.all([
     fetch('fm.json').then(r=>r.json()),
     fetch('fm_md.json').then(r=>r.json())
@@ -101,7 +109,7 @@ Promise.all([
     allStationsRO = ro.features;
     allStationsMD = md.features;
     dataLoaded = true;
-    tune(); // prima pornire automata
+    tune();
 });
 
 /* ================= CONTROLS ================= */
@@ -129,6 +137,42 @@ document.getElementById("freqInput").addEventListener("keydown",function(e){
     if(e.key==="Enter") tune();
 });
 
+/* ================= RIGHT CLICK RECEIVER ================= */
+
+map.on('contextmenu', function(e){
+
+    if(receiverMarker){
+        map.removeLayer(receiverMarker);
+    }
+
+    receiverMarker = L.marker(e.latlng,{
+        icon:receiverIcon,
+        draggable:true
+    }).addTo(map)
+    .bindPopup("<b>Receiver position</b>")
+    .openPopup();
+});
+
+/* ================= DISTANCE FUNCTION ================= */
+
+function haversine(lat1, lon1, lat2, lon2){
+
+    function toRad(x){ return x*Math.PI/180; }
+
+    let R = 6371;
+    let dLat = toRad(lat2-lat1);
+    let dLon = toRad(lon2-lon1);
+
+    let a =
+        Math.sin(dLat/2)*Math.sin(dLat/2) +
+        Math.cos(toRad(lat1))*Math.cos(toRad(lat2)) *
+        Math.sin(dLon/2)*Math.sin(dLon/2);
+
+    let c = 2*Math.atan2(Math.sqrt(a),Math.sqrt(1-a));
+
+    return R*c;
+}
+
 /* ================= TUNER ================= */
 
 function normalizeFreq(text){
@@ -136,12 +180,8 @@ function normalizeFreq(text){
 }
 
 function extractFrequencies(desc){
-
-    // extrage TOATE frecventele 87.5-108.0 inclusiv cu virgula
     let matches = desc.match(/\b(8[7-9][\.,]\d|9\d[\.,]\d|10[0-8][\.,]\d)\b/g);
-
     if(!matches) return [];
-
     return matches.map(f => normalizeFreq(f));
 }
 
@@ -178,30 +218,36 @@ function tune(){
         pointToLayer: function(feature, latlng){
             return L.marker(latlng,{icon:antennaIcon});
         },
-onEachFeature: function(feature, layer){
+        onEachFeature: function(feature, layer){
 
-    let desc = feature.properties.description || "";
+            layer.on('contextmenu', function(){
 
-    // pune fiecare frecvență pe rând nou
-    desc = desc.replace(
-        /\b(8[7-9][\.,]\d|9\d[\.,]\d|10[0-8][\.,]\d)\b/g,
-        "<br>$1"
-    );
+                if(!receiverMarker){
+                    alert("Place receiver first (right click on map).");
+                    return;
+                }
 
-    // elimină primul <br> dacă apare la început
-    if(desc.startsWith("<br>")){
-        desc = desc.substring(4);
-    }
+                let r = receiverMarker.getLatLng();
+                let d = haversine(
+                    r.lat, r.lng,
+                    feature.geometry.coordinates[1],
+                    feature.geometry.coordinates[0]
+                );
 
-    layer.bindPopup(
-        "<b>" + (feature.properties.name || "") + "</b><br>" +
-        desc
-    );
-}
+                layer.bindPopup(
+                    "<b>" + feature.properties.name + "</b><br>" +
+                    "Distance: <b>" + d.toFixed(2) + " km</b>"
+                ).openPopup();
+            });
+
+            layer.bindPopup(
+                "<b>" + (feature.properties.name || "") + "</b><br>" +
+                feature.properties.description
+            );
+        }
     }).addTo(map);
 }
 
 </script>
 </body>
 </html>
-
